Fix styling icons on smaller viewports

--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -46,7 +46,9 @@
   align-items: center;
   color: rgba(255, 255, 255, 0.75);
   display: inline-flex;
-  margin: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-top: 1em;
   transition: all 300ms ease;
 }
 
@@ -55,7 +57,7 @@
 }
 
 .intro__links li a svg {
-  display: inline;
+  display: inline-block;
   fill: currentColor;
   height: 2em;
   margin-right: 0.5em;
